--- a/src/assets/styles/pokemon.css
+++ b/src/assets/styles/pokemon.css
@@ -52,7 +52,13 @@ li {
 }
 
 input {
-    width: 130px;
+    width: 180px;
+    padding: 5px 15px;
+    font-size: 18px;
+}
+
+.input {
+    margin-right: 20px;
 }
 
 select {
